--------
v6.0-git
--------

[mms] Pre-fetch next unseen message in INBOX in dynamic view.
[mms] Allow Edit As New to be used as the default forward action (Request
      #11135).
[mms] Improved handling of messages with multiple From addresses in mailbox
      views.
[mms] Replying to a multipart/related message in HTML mode now correctly
      attaches data from the original message.
[mms] Allow deletion of all subfolders at once in dynamic view.
[mms] Provide details of when search results were last refreshed.
[mms] Dynamically update unseen message counts in folder list in smartmobile
      view.
[mms] Add mailbox caching to the smartmobile view.
[mms] Cache last seen message in smartmobile view.
[mms] Viewing a mailbox in smartmobile mode no longer resets the sortpref
      preference.
[mms] Allow all SMTP configuration parameters to be overridden in the backends
      configuration file (Request #11051).
[mms] Block images in HTML messages that appear to be sent from you by default,
      to prevent spammers form easily circumventing the block.
[mms] Add 'Edit As New' to Forward button dropdown menu in dynamic view.
[mms] Allow identifying addresses to always display images for without
      requiring to add them to the addressbook.
[mms] Disable text selection in dynamic view for everything but
      compose/message bodies.
[mms] Rewritten vCal/iCal attachment viewer/handler.
[mms] S/MIME certificate import from message data no longer requires popup
      window.
[mms] PGP key import from message attachment no longer requires popup window.
[mms] Improve PGP key import screen.
[mms] Truncate large address lists (50+) by default in dynamic message views.
[mms] Moved AJAX core features to Horde_Core package.
[jan] Add reporting as spam/innocent to smartphone view.
[mms] Workaround overquota error when deleting messages and using Trash
      mailbox.
[jan] Add basic search to smartphone view.
[jan] Add resume and "edit as new" to smartphone view.